samples/_failures_safe/1761794418_c3c968_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_881c9f48.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_881c9f48.c:158:32: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  158 |             token.value[i++] = lex
      |                                ^~~
      |                                lexer
./samples/SAFE/__tmp_881c9f48.c:158:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_881c9f48.c:158:35: error: expected ‘;’ at end of input
  158 |             token.value[i++] = lex
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_881c9f48.c:158:13: error: expected declaration or statement at end of input
  158 |             token.value[i++] = lex
      |             ^~~~~
./samples/SAFE/__tmp_881c9f48.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_881c9f48.c:158:13: error: expected declaration or statement at end of input
